fixed comment spacing

--- a/src/app/posts/comments/comments.component.scss
+++ b/src/app/posts/comments/comments.component.scss
@@ -6,6 +6,7 @@
 }
 .comment {
   display: flex;
+  margin-bottom: 6px;
 }
 .profile-img {
   height: 25px;
@@ -39,7 +40,7 @@
 }
 .action {
   font-size: 11px;
-  margin: 3px 0 8px 10px;
+  margin: 3px 0 0 10px;
 }
 .action > * {
   margin: 0 5px 0 0;
